@@ -11,7 +11,7 @@ const withInfo = (program :CommanderStatic ) => {
 
 const withRun = (program :CommanderStatic ) => {
     program.command('run <phase>')
-        .option( '-i --stdin', 'expects the command to be passed information on stdin')
+        .option( '-i --stdin <input>', "input to be stdin'ed to the hooks")
         .description('run the hooks of the given phase')
         .action( (phase,opts) => {
             require('./commands/run').default(new Vaudeville(),phase,opts);
