@@ -4,6 +4,7 @@ NEXT
     - add sadness when there is no hook. (GH#1)
     - credit Gizmo Mathboy for the name. (GH#3)
     - mention alternatives. (GH#7)
+    - add --stdin option for 'run'. (GH#5)
 
 0.0.1 2019-11-11
     - Initial release.
